# EneriCraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  go.mod  main.go
.github/workflows/: ci.yml
client/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: mod.rs  room.rs  server.rs  tunnel.rs
client/src-tauri/src/plugin/: mod.rs
client/src-tauri/src/server/: config.rs  downloader.rs  java_detect.rs  launcher.rs  mod.rs
client/src-tauri/src/signaling/: mod.rs
client/src-tauri/src/sync/: delta.rs  mod.rs  scanner.rs  transfer.rs
client/src-tauri/src/tunnel/: connect_code.rs  mod.rs  nat.rs  quic_mgr.rs  stun.rs  tcp_bridge.rs
client/src-tauri/src/utils/: config.rs  mod.rs
cmd/bridgetest/: main.go
cmd/detecttest/: main.go
cmd/javatest/: main.go
cmd/lantest/: main.go
cmd/quicdebug/: main.go
cmd/relay/: main.go
cmd/relaytest/: main.go
cmd/servertest/: main.go
cmd/signal/: main.go
cmd/usernametest/: main.go
cmd/versioncheck/: main.go
docs/: serverless-architecture.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
internal/api/: connect.go  handler.go  room.go  server.go  state.go  tunnel.go  tunnel_mgr.go
internal/auth/: hosts_other.go  hosts_windows.go  server.go
internal/config/: config.go
internal/connectcode/: codec.go
internal/server/: downloader.go  java.go  launcher.go  (+3 more)
server/: go.mod
(+36 files in other folders)
