[package]
name = "mc-connector"
version = "0.1.0"
description = "MC 联机器 — 零服务器成本、P2P直连、一键联机"
authors = ["MC Connector Community"]
edition = "2021"
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"

# QUIC / 网络
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"

# 其他
brotli = "7"
qrcode = { package = "qrcode-generator", version = "4" }
image = "0.25"
sha2 = "0.10"
walkdir = "2"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
